--- a/PamposTools.SaferPay.csproj
+++ b/PamposTools.SaferPay.csproj
@@ -2,6 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Charalambos Hadjiantoniou</Authors>
+    <Product>SaferPay.NET</Product>
+    <Description>.NET models of SaferPay according to JSON API Spec Version 1.19.</Description>
+    <Copyright>Charalambos Hadjiantoniou</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/Vromeza/PamposTools.SaferPay</RepositoryUrl>
+    <PackageTags>SaferPay, SIXPayments, SaferPayNET</PackageTags>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 
 </Project>
