--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 ​
 pool:
-  vmImage: 'windows-2019'
+  vmImage: 'windows-latest'
 ​
 variables:
   configuration: 'Release'
@@ -14,7 +14,7 @@ steps:
   inputs:
     packageType: 'sdk'
     version: '2.x'
-​
+
 - task: DotNetCoreCLI@2
   displayName: 'Build the project'
   inputs:
